--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .grid-container {
   width: 100%;
   margin: auto;
-  display: grid;
+  /* display: grid; */
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(200px, auto);
 
@@ -10,8 +10,8 @@ grid-template-areas:
   "header header header"
   "sidebar content content"
   "sidebar content content"
-  "sidebar article article"
-  "sidebar article article"
+  "sidebar content content"
+  "footer foooter footer"
   "footer footer footer"
 }
 
@@ -36,7 +36,19 @@ main h1{
 
 }
 
-/* h1::before
+main h2{
+  font-family: 'Rubik 80s Fade', cursive;
+  position: relative;
+  font-size: 2vw;
+  color: #b8c5ca 100%;
+  -webkit-text-stroke: 0.3vw rgb(43, 60, 188); 
+  text-transform: uppercase; 
+  display: flex;
+  justify-content: center;
+
+}
+
+h1::before
 {
     content: attr(data-text);
     position: absolute;
@@ -62,7 +74,8 @@ main h1{
     {
       width: 100%;
     }
-} */
+}
+
 .grid-item2 {
   grid-area: sidebar;
 }
@@ -72,21 +85,21 @@ main h1{
 }
 
 .grid-item4 {
-  grid-area: article;
-}
-
-.grid-item5 {
   grid-area: footer;
 }
 
 
-li {
-  background-color: white;
-
-}
-
 img {
   height: 400px;
   width: 400px;
-  border-color: blueviolet;
+  border: 5px solid rgb(18, 96, 49);
+  display:inline-block;
+  justify-content:space-between
 } 
+
+button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
